--- a/components/components-azurestorage/src/main/resources/org/talend/components/azurestorage/blob/helpers/messages.properties
+++ b/components/components-azurestorage/src/main/resources/org/talend/components/azurestorage/blob/helpers/messages.properties
@@ -2,3 +2,7 @@ form.Main.title=Blob filter
 property.prefix.displayName=Prefix
 property.include.displayName=Include sub-directories
 property.create.displayName=Create parent directories
+form.Main.displayName=Main
+form.Advanced.displayName=Advanced
+form.Reference.displayName=Advanced
+form.Wizard.displayName=Advanced
