--- a/components/components-azurestorage/src/main/resources/org/talend/components/azurestorage/tazurestorageconnection/messages.properties
+++ b/components/components-azurestorage/src/main/resources/org/talend/components/azurestorage/tazurestorageconnection/messages.properties
@@ -11,7 +11,10 @@ property.sharedAccessSignature.displayName=Azure Shared Access Signature
 property.name.displayName=Name
 #
 form.Main.title=Azure Storage Connection Settings
+form.Main.displayName=Azure Storage Connection Settings
 form.Reference.title=Connection Reference
+form.Reference.displayName=Connection Reference
 #
 form.Wizard.title=Azure Storage Connection Settings
+form.Wizard.displayName=Azure Storage Connection Settings
 form.Wizard.subtitle=Fill in fields to configure connection.
