--- a/components/components-azurestorage/src/main/resources/org/talend/components/azurestorage/table/tazurestorageinputtable/messages.properties
+++ b/components/components-azurestorage/src/main/resources/org/talend/components/azurestorage/table/tazurestorageinputtable/messages.properties
@@ -1,4 +1,4 @@
 component.tAzureStorageInputTable.title=Read rows from a table in a Microsoft Azure Storage
 property.useFilterExpression.displayName=Use filter expression
 property.filterExpression.displayName=Filter expression
-property.combinedFilter.displayName=Combined filter expression
+property.producedFilter.displayName=Effective filter
