--- a/components/components-marketo/src/main/resources/org/talend/components/marketo/messages.properties
+++ b/components/components-marketo/src/main/resources/org/talend/components/marketo/messages.properties
@@ -1,6 +1,7 @@
 form.Advanced.title=Advanced
 form.Main.title=Main
 #
+property.referencedComponent.displayName=Use this connection
 property.numberCall.displayName=Number of calls
 property.apiMode.displayName=API Mode
 property.batchSize.displayName=Batch size
