feat(TDI-38101) : implement Custom Objects - UI and Fixes
TDI-38101 #time 1d

--- a/components/components-marketo/src/main/resources/org/talend/components/marketo/tmarketooutput/messages.properties
+++ b/components/components-marketo/src/main/resources/org/talend/components/marketo/tmarketooutput/messages.properties
@@ -23,3 +23,8 @@ property.operation.displayName=Operation
 property.operationType.displayName=Operation type
 property.lookupField.displayName=Lookup field
 property.deDupeEnabled.displayName=Dedupe prospects record using the email address
+#
+property.customObjectName.displayName=Custom object name
+property.customObjectSyncAction.displayName=Sync method
+property.customObjectDeleteBy.displayName=Delete by
+property.customObjectDedupeBy.displayName=Dedupe by
