--- a/components/components-marketo/src/main/resources/org/talend/components/marketo/tmarketoinput/messages.properties
+++ b/components/components-marketo/src/main/resources/org/talend/components/marketo/tmarketoinput/messages.properties
@@ -37,3 +37,11 @@ property.setIncludeTypes.displayName=Set include types
 property.sinceDateTime.displayName=Since DateTime
 property.timeout.displayName=Timeout
 property.type.displayName=Type
+#
+property.customObjectAction.displayName=Action
+property.customObjectName.displayName=CustomObject name
+property.customObjectNames.displayName=CustomObject names
+property.customObjectFilterType.displayName=Filter type
+property.customObjectFilterValues.displayName=Filtervalues
+
+
